log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 01:12:39 AM UTC 2026: 
 tests:  0|6
========================================
46bc9bb
Fri May 15 01:19:54 AM UTC 2026: 
 graph.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
========================================
53a5f33
Fri May 15 01:21:51 AM UTC 2026: 
 graph.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
a9dcb4d
Fri May 15 01:28:11 AM UTC 2026: 
 graph.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:25: error: implicit declaration of function ‘search’; did you mean ‘bsearch’? [-Wimplicit-function-declaration]
   40 |     MapPair *auxiliar = search(g->adjacencyMap, label);
      |                         ^~~~~~
      |                         bsearch
graph.c:40:25: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:43:19: error: implicit declaration of function ‘strup’; did you mean ‘strdup’? [-Wimplicit-function-declaration]
   43 |     char *copia = strup(label);
      |                   ^~~~~
      |                   strdup
graph.c:43:19: error: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
8f910ec
